# FLUE_Lat

./: .pre-commit-config.yaml  README.md  fpm.rsp  fpm.toml  fpm.toml.ryan  mag.toml  u0.toml
app/: FFTTest.f90  flang56.f90  flangAssignA.f90  flangCopyOut.f90  glue.f90  magnetic.f90  main.f90  superMWE.f90  uzerobar.f90
c_wrapper/: FLUE_c.f90
python/: meson.build  pyproject.toml
python/FLUE/: __init__.py
python/FLUE/compiled/: __init__.py
python/FLUE/gluonAna/: __init__.py  gpManip.py  momentum.py
python/FLUE/gluonCalc/: __init__.py  gluonprop.py  su3matrixops.py
src/: FLUE.f90  SU3MatrixOps.F90  SU3MatrixOps.f90  constants.f90  generateGitHash.sh  glueLoops.F90  jack.f90  version.F90  wloops.F90  wloops.f90
src/gaugeIO/: ILDG_bin.f90  openqcdfileio_standalone.f90
src/gluonAna/: gpManip.f90  momentum.f90
src/gluonCalc/: SU3MatrixOps.f90  gluonProp.f90
